--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@ Blacksburg, VA 24061, USA <br />
 E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a third year PhD student at <a href="https://vt.edu/">Virginia Tech</a>, working with my advisor <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. <br /> 
-I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where <br /> I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong <br /> University of Science and Technology</a>, Wuhan, China.</p>
+<p>I am a third year PhD student at <a href="https://vt.edu/">Virginia Tech</a>, working with my advisor <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.</p>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech, Expected in December 2019</p>
