--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <h2>Recent News</h2>
 <ul>
 
+<!-- <li><p><b>July &lsquo;17:</b> Get an offer of tenure-track Associate Professor from College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
+</li> -->
+
 <li><p><b>June &lsquo;26:</b> Start a new project with <a href="http://robotics.usc.edu/resl/people/96/">Ragesh</a> from <a href= "https://www.usc.edu/">USC</a> on online resilient resource allocation.</p>
 </li>
 
