--- a/publication.html
+++ b/publication.html
@@ -46,7 +46,7 @@ function toggleBibtex(articleid) {
 Data</a>,” <i>IEEE Transactions on Automatic Control (TAC)</i>. (Submitted). 
 </p>
 </li>
-<li><p><b>L. Zhou</b>, and P. Tokekar, “<a href="https://arxiv.org/pdf/1709.06428.pdf">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE Transactions on Robotics (TRO)</i>. (To appear). <a href="pdfs/TRO_sensor.pdf">[PDF]</a> <a href="javascript:toggleBibtex('zhou2019sensor')">[BibTex]</a> <a href="https://www.youtube.com/watch?v=Kt0yeYXyrKQ">[Video]</a></p>
+<li><p><b>L. Zhou</b>, and P. Tokekar, “<a href="https://ieeexplore.ieee.org/abstract/document/8747443/">Sensor Assignment Algorithms to Improve Observability while Tracking Targets</a>,” <i>IEEE Transactions on Robotics (TRO)</i>, 2019. <a href="pdfs/TRO_sensor.pdf">[PDF]</a> <a href="javascript:toggleBibtex('zhou2019sensor')">[BibTex]</a> <a href="https://www.youtube.com/watch?v=Kt0yeYXyrKQ">[Video]</a></p>
 </li>
 <div id="bib_zhou2019sensor" class="bibtex noshow"><pre>
 @Article{zhou2019sensor,
