--- a/publication.html
+++ b/publication.html
@@ -6,7 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <link rel="stylesheet" href="bibtex.css" type="text/css" />
-<title>Publications <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&amp;hl=en&amp;oi=sra">[Google Scholar]</a> </title>
+<title>Publications </title>
+<!-- <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&amp;hl=en&amp;oi=sra">[Google Scholar]</a> -->
 <script type="text/javascript">
 <!--
 // Toggle Display of BibTeX
@@ -38,7 +39,8 @@ function toggleBibtex(articleid) {
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>Publications <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&amp;hl=en&amp;oi=sra">[Google Scholar]</a> </h1>
+<h1>Publications </h1>
+<!-- <a href="https://scholar.google.com/citations?user=0sNe1G4AAAAJ&amp;hl=en&amp;oi=sra">[Google Scholar]</a> -->
 </div>
 <h2>Journal Papers</h2>
 <ol>
