--- a/publication.html
+++ b/publication.html
@@ -44,6 +44,10 @@ function toggleBibtex(articleid) {
 </div>
 <h2>Journal Papers</h2>
 <ol>
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas and P. Tokekar, Distributed Attack-Robust Submodular Maximizationfor Multi-Robot Planning, <i>IEEE Robotics and Automation Letters and IEEE International
+Conference on Robotics and Automation (RA-L & ICRA'20)</i>. (Submitted). 
+</p>
+</li>
 <li><p>Z. Zhang, <b>L. Zhou</b> and P. Tokekar, “<a href="https://arxiv.org/pdf/1809.04756.pdf">Strategies to Inject Spoofed Measurement
 Data</a>,” <i>IEEE Transactions on Automatic Control (TAC)</i>. (Submitted). 
 </p>
