--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>September &lsquo;10:</b> Submit a paper on <i> Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</i> to RA-L+ICRA'20 with <a href="https://vasileiostzoumas.com/">Vasileios Tzoumas</a>, <a href="http://tokekar.github.io/">Pratap Tokekar</a>, and <a href="https://www.georgejpappas.org/">George J. Pappas</a>.</p>
+</li>
+
+<li><p><b>July &lsquo;19:</b> Give a job talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
+</li>
+
 <!-- <li><p><b>July &lsquo;19:</b> Get an offer of tenure-track Associate Professor from College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
 </li> -->
 
