--- a/publication.html
+++ b/publication.html
@@ -117,6 +117,9 @@ year = {2019},
   publisher={IET}
 }
 </pre></div>
+
+<li><p> L. Peng, A. Shen, N. Zhang, and <b>L. Zhou</b>, “<a href="http://www.cqvip.com/qk/94978x/201312/48390307.html">Application of Industrial Embedded System Upgrade Technology Based on Wireless IAP</a>,” <i>Instrument Technique & Sensor</i>, No. 12, 2013. </p>
+</li>
 </ol>
 <h2>Conference Papers</h2>
 <ol>
