--- a/publication.html
+++ b/publication.html
@@ -45,7 +45,7 @@ function toggleBibtex(articleid) {
 <h2>Journal Papers</h2>
 <ol>
 <li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas and P. Tokekar, Distributed Attack-Robust Submodular Maximizationfor Multi-Robot Planning, <i>IEEE Robotics and Automation Letters and IEEE International
-Conference on Robotics and Automation (RA-L & ICRA'20)</i>. (Submitted). 
+Conference on Robotics and Automation (RA-L & ICRA'20)</i>. <a href="pdfs/dis_robust.pdf">[PDF]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>. (Submitted). 
 </p>
 </li>
 <li><p>Z. Zhang, <b>L. Zhou</b> and P. Tokekar, “<a href="https://arxiv.org/pdf/1809.04756.pdf">Strategies to Inject Spoofed Measurement
@@ -118,7 +118,9 @@ year = {2019},
 }
 </pre></div>
 
-<li><p> L. Peng, A. Shen, N. Zhang, and <b>L. Zhou</b>, “<a href="http://www.cqvip.com/qk/94978x/201312/48390307.html">Application of Industrial Embedded System Upgrade Technology Based on Wireless IAP</a>,” <i>Instrument Technique & Sensor</i>, No. 12, 2013. </p>
+<li><p> L. Peng, A. Shen, N. Zhang, and <b>L. Zhou</b>, “<a href="http://www.cqvip.com/qk/94978x/201312/48390307.html">Application of Industrial Embedded System Upgrade Technology Based on Wireless IAP</a>,” <i>Instrument Technique & Sensor</i>, No. 12, 2013. <a href="pdfs/iap.pdf">[PDF]</a> </p>
+
+
 </li>
 </ol>
 <h2>Conference Papers</h2>
