--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>September &lsquo;25:</b> Submit an extended abstract on <i> Risk-Aware Path Planning and Assignment with Uncertainty Extraction from Deep Learning</i> to Northeast Robotics Colloquium (NERC) 2019 with <a href="https://sites.google.com/vt.edu/maymoonah">Maymoonah Toubeh</a> and <a href="http://tokekar.github.io/">Pratap Tokekar</a>.</p>
+</li>
+
 <li><p><b>September &lsquo;10:</b> Submit a paper on <i> Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</i> to RA-L+ICRA'20 with <a href="https://vasileiostzoumas.com/">Vasileios Tzoumas</a>, <a href="http://tokekar.github.io/">Pratap Tokekar</a>, and <a href="https://www.georgejpappas.org/">George J. Pappas</a>.</p>
 </li>
 
