--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <h2>Recent News</h2>
 <ul>
 
+<li><p><b>September &lsquo;26:</b> Submit a paper on <i> Resilient Coverage: Exploring the Local-to-Global Trade-off  </i> to ACC'20 with <a href="http://robotics.usc.edu/resl/people/96/">Ragesh Kumar Ramachandran</a>, and <a href="http://robotics.usc.edu/~gaurav/">Gaurav S. Sukhatme</a>.</p>
+</li>
+
 <li><p><b>September &lsquo;25:</b> Submit an extended abstract on <i> Risk-Aware Path Planning and Assignment with Uncertainty Extraction from Deep Learning</i> to Northeast Robotics Colloquium (NERC) 2019 with <a href="https://sites.google.com/vt.edu/maymoonah">Maymoonah Toubeh</a> and <a href="http://tokekar.github.io/">Pratap Tokekar</a>.</p>
 </li>
 
