--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <ul>
 <li><p>Multi-Robot Coordination  </p>
 </li>
-<li><p>Robot Task Allocation</p>
+<li><p>Resilient & Risk-Aware Decision Making</p>
+</li>
+<li><p>Robot Task Allocation & Planning</p>
 </li>
 <li><p>Approximation Algorithm</p>
-</li>
-<li><p>Risk-Averse Decision Making</p>
 </li>
 </ul>
 <p><a href="research.html">Find out more</a>.</p>
