--- a/publication.html
+++ b/publication.html
@@ -44,7 +44,12 @@ function toggleBibtex(articleid) {
 </div>
 <h2>Journal Papers</h2>
 <ol>
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas and P. Tokekar, Distributed Attack-Robust Submodular Maximizationfor Multi-Robot Planning, <i>IEEE Robotics and Automation Letters and IEEE International
+
+<li><p><b>L. Zhou</b>, and P. Tokekar, “Risk-Aware Submodular Maximization in Multi-Robot Teams”. (In Preparation for TRO). 
+</p>
+</li>
+
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” <i>IEEE Robotics and Automation Letters and IEEE International
 Conference on Robotics and Automation (RA-L & ICRA'20)</i>. <a href="pdfs/dis_robust.pdf">[PDF]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>. (Submitted). 
 </p>
 </li>
@@ -125,6 +130,10 @@ year = {2019},
 </ol>
 <h2>Conference Papers</h2>
 <ol>
+
+<li><p>Maymoonah Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Path Planning and Assignment with Uncertainty Extraction from Deep Learning”. (In Preparation for AAMAS'20)</p>
+</li>
+
 
 <li><p>R. K. Ramachandran, <b>L. Zhou</b>, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off,” <i>IEEE American Control Conference (ACC)</i>, Denver, USA, 2020. <a href="pdfs/ACC20.pdf">[PDF].</a> (Submitted) </p>
 </li>
