--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <p>I am a Ph.D. student at <a href="https://vt.edu/">Virginia Tech</a>, working with my advisor <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.</p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech, Expected in December 2019</p>
+<li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech, Expected in March 2020</p>
 </li>
 <li><p>M.S. in Automation, Shanghai Jiao Tong University, 2016</p>
 </li>
@@ -54,6 +54,8 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </li>
 <li><p>Approximation Algorithm</p>
 </li>
+<li><p>Deep Learning</p>
+</li>
 </ul>
 <p><a href="research.html">Find out more</a>.</p>
 <div class="infoblock">
@@ -61,14 +63,17 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <h2>Recent News</h2>
 <ul>
 
-<li><p><b>September &lsquo;26:</b> Submit a paper on <i> Resilient Coverage: Exploring the Local-to-Global Trade-off  </i> to ACC'20 with <a href="http://robotics.usc.edu/resl/people/96/">Ragesh Kumar Ramachandran</a>, and <a href="http://robotics.usc.edu/~gaurav/">Gaurav S. Sukhatme</a>.</p>
+<li><p><b>January &lsquo;21:</b> Two papers are accepted to presented at ICRA'20. See you in Paris. </p>
+</li>
+
+<!-- <li><p><b>September &lsquo;26:</b> Submit a paper on <i> Resilient Coverage: Exploring the Local-to-Global Trade-off  </i> to ACC'20 with <a href="http://robotics.usc.edu/resl/people/96/">Ragesh Kumar Ramachandran</a>, and <a href="http://robotics.usc.edu/~gaurav/">Gaurav S. Sukhatme</a>.</p>
 </li>
 
 <li><p><b>September &lsquo;25:</b> Submit an extended abstract on <i> Risk-Aware Path Planning and Assignment with Uncertainty Extraction from Deep Learning</i> to Northeast Robotics Colloquium (NERC) 2019 with <a href="https://sites.google.com/vt.edu/maymoonah">Maymoonah Toubeh</a> and <a href="http://tokekar.github.io/">Pratap Tokekar</a>.</p>
 </li>
 
 <li><p><b>September &lsquo;10:</b> Submit a paper on <i> Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</i> to RA-L+ICRA'20 with <a href="https://vasileiostzoumas.com/">Vasileios Tzoumas</a>, <a href="http://tokekar.github.io/">Pratap Tokekar</a>, and <a href="https://www.georgejpappas.org/">George J. Pappas</a>.</p>
-</li>
+</li> -->
 
 <li><p><b>July &lsquo;19:</b> Give a job talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
 </li>
