--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <h2>Recent News</h2>
 <ul>
 
-<li><p><b>January &lsquo;21:</b> Two papers are accepted to presented at ICRA'20. See you in Paris. </p>
+<li><p><b>January &lsquo;21:</b> Two papers will be presented at ICRA'20. See you in Paris. </p>
 </li>
 
 <!-- <li><p><b>September &lsquo;26:</b> Submit a paper on <i> Resilient Coverage: Exploring the Local-to-Global Trade-off  </i> to ACC'20 with <a href="http://robotics.usc.edu/resl/people/96/">Ragesh Kumar Ramachandran</a>, and <a href="http://robotics.usc.edu/~gaurav/">Gaurav S. Sukhatme</a>.</p>
