--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <h1>Lifeng Zhou </h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/bio.png" alt="alt text" width="150px" height="149px" />&nbsp;</td>
+<img src="photos/lifeng_bio.jpeg" alt="alt text" width="148px" height="178px" />&nbsp;</td>
 <td align="left"><p>Ph.D. student,<br /> <a href="https://ece.vt.edu/">Bradley Department of Electrical and Computer Engineering</a>, <br /><a href="https://vt.edu/">Virginia Tech</a><br />
 621 Whittemore Hall, Virginia Tech, <br />
 Blacksburg, VA 24061, USA <br /> 
