--- a/publication.html
+++ b/publication.html
@@ -135,7 +135,7 @@ year = {2019},
 <ol>
 
 
-<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Resilient Orienteering Problem in Multi-Robot Path Planning”. </p>
+<li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. Note: submitted. </p>
 </li>
 
 <li><p>M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Path Planning and Assignment with Uncertainty Extraction from Deep Learning”. </p>
