--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </li>
 <li><p>Resilient & Risk-Aware Decision Making</p>
 </li>
-<li><p>Robot Task Allocation & Planning</p>
+<li><p>Approximation Algorithms</p>
 </li>
-<li><p>Approximation Algorithm</p>
+<li><p>Robot Task Allocation & Planning</p>
 </li>
 <li><p>Deep Learning</p>
 </li>
