--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">menu</div>
+<div class="menu-category">Menu</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<!-- <div class="menu-item"><a href="index.html" class="current">MRDM Lab</a></div> -->
 <div class="menu-item"><a href="research.html">Research</a></div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
-<div class="menu-item"><a href="pdfs/Lifeng_CV.pdf">CV</a></div>
-<div class="menu-category">links</div>
+<div class="menu-item"><a href="publications.html">Publications</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
+<div class="menu-item"><a href="service.html">Service</a></div>
+<!-- <div class="menu-item"><a href="pdfs/Lifeng_CV.pdf">CV</a></div> -->
+<div class="menu-category">Contact</div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/lifeng-zhou-18135aa6/">Linkedin</a></div>
-<div class="menu-item"><a href="https://twitter.com/LifengVtech?lang=en">Twitter</a></div>
+<div class="menu-item"><a href="https://twitter.com/Lifeng917">Twitter</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>Lifeng Zhou </h1>
 </div>
 <table class="imgtable"><tr><td>
-<img src="photos/lifeng_bio.jpeg" alt="alt text" width="148px" height="178px" />&nbsp;</td>
-<td align="left"><p>Ph.D. student,<br /> <a href="https://ece.vt.edu/">Bradley Department of Electrical and Computer Engineering</a>, <br /><a href="https://vt.edu/">Virginia Tech</a><br />
+<img src="photos/lifeng_bio.jpeg" alt="alt text" width="140px" height="170px" />&nbsp;</td>
+<td align="left"><p>Ph.D. Candidate,<br /> <a href="https://ece.vt.edu/">Bradley Department of Electrical and Computer Engineering</a>, <br /><a href="https://vt.edu/">Virginia Tech</a><br />
 621 Whittemore Hall, Virginia Tech, <br />
 Blacksburg, VA 24061, USA <br /> 
 
@@ -34,7 +37,14 @@ Blacksburg, VA 24061, USA <br />
 E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </td></tr></table>
 <h2>About me</h2>
-<p>I am a Ph.D. student at <a href="https://vt.edu/">Virginia Tech</a>, working with my advisor <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.</p>
+<p>I am a Ph.D. candidate at <a href="https://vt.edu/">Virginia Tech</a>, working with my advisor <a href="http://tokekar.github.io/">Prof. Pratap Tokekar</a> in <a href="https://www.raas.ece.vt.edu/">RAAS Lab</a>. I received my Master's degree in <a href="http://automation.sjtu.edu.cn/">Automation</a> from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://automation.sjtu.edu.cn/ShowPeople.aspx?info_lb=590&amp;info_id=1493&amp;flag=98">Prof. Shaoyuan Li</a>. Before that I received my B.S. degree in <a href="http://english.auto.hust.edu.cn/">Automation</a> from <a href="http://english.hust.edu.cn/">Huazhong University of Science and Technology</a>, Wuhan, China.
+
+<br />
+<br>
+
+My research focuses on enabling security, trustworthiness, and
+long-term autonomy in robotics and autonomous systems. I have worked in related areas such as multi-robot coordination, approximation algorithms, combinatorial optimization, deep learning, model predictive control, and resilient and risk-aware decision making. My long-term goal is to investigate multi-robot security and trustworthy autonomy when robots use data-driven machine learning and deep learning techniques. <a href="research.html">Find out more</a>.
+</p>
 <h2>Education</h2>
 <ul>
 <li><p>Ph.D. Student in Electrical &amp; Computer Engineering, Virginia Tech, Expected in March 2020</p>
@@ -44,7 +54,7 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <li><p>B.S. in Automation, Huazhong University of Science and Technology, 2013</p>
 </li>
 </ul>
-<h2>Research</h2>
+<!-- <h2>Research</h2>
 <ul>
 <li><p>Multi-Robot Coordination  </p>
 </li>
@@ -52,16 +62,19 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </li>
 <li><p>Approximation Algorithms</p>
 </li>
-<li><p>Robot Task Allocation & Planning</p>
+<li><p>Task Assignment & Planning</p>
 </li>
 <li><p>Deep Learning</p>
-</li>
+</li> -->
 </ul>
-<p><a href="research.html">Find out more</a>.</p>
+<!-- <p><a href="research.html">Find out more</a>.</p> -->
 <div class="infoblock">
 <div class="blockcontent">
 <h2>Recent News</h2>
 <ul>
+
+<li><p><b>Febuary &lsquo;07:</b> Give a talk in <a href="https://www.wpi.edu/academics/departments/robotics-engineering">Robotics Engineering at WPI</a>!</p>
+</li>
 
 <li><p><b>January &lsquo;21:</b> Two papers will be presented at ICRA'20. See you in Paris. </p>
 </li>
@@ -75,7 +88,7 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 <li><p><b>September &lsquo;10:</b> Submit a paper on <i> Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning</i> to RA-L+ICRA'20 with <a href="https://vasileiostzoumas.com/">Vasileios Tzoumas</a>, <a href="http://tokekar.github.io/">Pratap Tokekar</a>, and <a href="https://www.georgejpappas.org/">George J. Pappas</a>.</p>
 </li> -->
 
-<li><p><b>July &lsquo;19:</b> Give a job talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
+<li><p><b>July &lsquo;19:</b> Give a talk at College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
 </li>
 
 <!-- <li><p><b>July &lsquo;19:</b> Get an offer of tenure-track Associate Professor from College of Control Science and Engineering, <a href="http://www.zju.edu.cn/english/">Zhejiang University (浙江大学)</a>!</p>
@@ -103,6 +116,11 @@ E-mail: <i>lfzhou</i> [@] vt [DOT] edu</p>
 </li>
 </ul>
 </div></div>
+<div id="footer">
+<div id="footer-text">
+Page generated 2020-02-08, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+</div>
+</div>
 </td>
 </tr>
 </table>
