--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
 <!-- <div class="menu-item"><a href="pdfs/Lifeng_CV.pdf">CV</a></div> -->
 <div class="menu-category">Contact</div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/lifeng-zhou-18135aa6/">Linkedin</a></div>
-<div class="menu-item"><a href="https://twitter.com/LifengVtech?lang=en">Twitter</a></div>
+<div class="menu-item"><a href="https://twitter.com/Lifeng917">Twitter</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
