--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@ My research focuses on enabling <b> security, trustworthiness, and long-term aut
 <br />
 <br>
 We provide both centralized and distributed resilient algorithms to counter such failures/attacks. Our algorithms have the following properties: First, they achieve maximal resiliency, since the algorithms are valid for any number of failures. Second, the centralized resilient algorithm runs as fast as the standard greedy algorithm, and the distributed resilient algorithm runs even faster. Third, they provide provable approximation bounds on the tracking performance. We quantify our algorithms' approximation performance using a novel notion of curvature for monotone set functions subject to matroid constraints. Finally, we demonstrate the efficacy of our algorithms through MATLAB and Gazebo simulations.
-<br />[<a href="pdfs/RAL_target.pdf" target=&ldquo;blank&rdquo;><i>RA-L+ICRA'19</i></a>] [<a href="pdfs/dis_robust.pdf" target=&ldquo;blank&rdquo;><i>RA-L+ICRA'20, Submitted</i></a>]<!--[<a href="https://youtu.be/xfMZloeKo6c" target=&ldquo;blank&rdquo;>Video</a>]--></p>
+<br />[<a href="pdfs/RAL_target.pdf" target=&ldquo;blank&rdquo;><i>RA-L+ICRA'19</i></a>] [<a href="pdfs/dis_robust.pdf" target=&ldquo;blank&rdquo;><i>ICRA'20</i></a>]<!--[<a href="https://youtu.be/xfMZloeKo6c" target=&ldquo;blank&rdquo;>Video</a>]--></p>
 <h2>Managing Risk through Stochastic Submodular Optimization</h2>
 <img src="photos/simple_mod_exp.png" width="400"></img>
 <br>
