--- a/publications.html
+++ b/publications.html
@@ -136,16 +136,18 @@ year = {2019},
 <h2>Conference Papers</h2>
 <ol>
 
+<li><p>V. D. Sharma*, M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Planning and Assignment for Ground Vehicles using Uncertain Perception from Aerial Vehicles”. Note: submitted. <a href="pdfs/IROS20risk_dl.pdf">[PDF].</a> </p>
+</li>
+
+
+<li><p>R. K. Ramachandran, <b>L. Zhou</b>, J. A. Preiss, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off”. Note: submitted. <a href="pdfs/IROS20_resilient.pdf">[PDF].</a> </p>
+</li>
+
 
 <li><p>G. Shi, <b>L. Zhou</b>, and P. Tokekar, “Robust Multiple-Path Orienteering Problem: Securing Against Adversarial Attacks”. Note: submitted. </p>
 </li>
 
-<li><p>M. Toubeh*, <b>L. Zhou*</b>, and P. Tokekar, “Risk-Aware Path Planning and Assignment with Uncertainty Extraction from Deep Learning”. </p>
-</li>
 
-
-<li><p>R. K. Ramachandran, <b>L. Zhou</b>, and G. S. Sukhatme, “Resilient Coverage: Exploring the Local-to-Global Trade-off”. Note: submitted. <a href="pdfs/ACC20.pdf">[PDF].</a> </p>
-</li>
 
 <li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning,” <i>IEEE International Conference on Robotics and Automation (ICRA'20)</i>. <a href="pdfs/dis_robust.pdf">[PDF]</a> <a href="https://www.youtube.com/watch?v=T0Hb0UURCLM">[Video]</a>. Note: accepted. 
 </p>
