--- a/publications.html
+++ b/publications.html
@@ -51,6 +51,10 @@ function toggleBibtex(articleid) {
 </p>
 </li>
 
+<li><p>Z. Zhang, J.Lee, JM Smereka, Y. Sung, <b>L. Zhou</b>, and P. Tokekar, “Tree Search Techniques for Minimizing Detectability and Maximizing Visibility”. 
+</p>
+</li>
+
 <li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. 
 </p>
 </li>
