--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,8 @@ function toggleBibtex(articleid) {
 <h2>Journal Papers</h2>
 <ol>
 
-<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination”. 
+
+<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. 
 </p>
 </li>
 
@@ -55,7 +56,8 @@ function toggleBibtex(articleid) {
 </p>
 </li>
 
-<li><p><b>L. Zhou</b>, V. Tzoumas, G. J. Pappas, and P. Tokekar, “Distributed Attack-Robust Submodular Maximization for Multi-Robot Planning”. 
+
+<li><p><b>L. Zhou</b> and P. Tokekar, “Risk-Aware Submodular Optimization for Multi-Robot Coordination,” <i>IEEE Transactions on Robotics (TRO)</i>. Note: submitted.  
 </p>
 </li>
 
